# odoomates

./: README.md
odoo-bringout-odoomates-accounting_pdf_reports/: README.md  pyproject.toml
odoo-bringout-odoomates-accounting_pdf_reports/accounting_pdf_reports/: __init__.py  __manifest__.py
odoo-bringout-odoomates-accounting_pdf_reports/accounting_pdf_reports/controllers/: main.py
odoo-bringout-odoomates-accounting_pdf_reports/accounting_pdf_reports/i18n/: accounting_pdf_reports.pot  bs.po
odoo-bringout-odoomates-accounting_pdf_reports/accounting_pdf_reports/models/: account_move_line.py
odoo-bringout-odoomates-accounting_pdf_reports/accounting_pdf_reports/report/: __init__.py  ir_actions_report.py  report.xml  report_financial.py  report_general_ledger.py  report_journal_entries.xml  report_partner_ledger.py  report_partner_ledger.xml  report_tax.py  report_tax.xml  report_trial_balance.py
odoo-bringout-odoomates-accounting_pdf_reports/accounting_pdf_reports/views/: financial_report.xml  ledger_menu.xml  settings.xml
odoo-bringout-odoomates-accounting_pdf_reports/accounting_pdf_reports/wizard/: account_partner_ledger.py  partner_ledger.xml
odoo-bringout-odoomates-accounting_pdf_reports/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  REPORTS.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-odoomates-accounting_pdf_reports/docs/: REPORT_PDF_NAME.md
odoo-bringout-odoomates-om_account_accountant/: README.md  pyproject.toml
odoo-bringout-odoomates-om_account_accountant/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-odoomates-om_account_accountant/om_account_accountant/: __manifest__.py  hooks.py
odoo-bringout-odoomates-om_account_accountant/om_account_accountant/i18n/: bs.po
odoo-bringout-odoomates-om_account_accountant/om_account_accountant/migrations/16.0.1.0.1/: pre-migration.py
odoo-bringout-odoomates-om_account_accountant/om_account_accountant/security/: group.xml
odoo-bringout-odoomates-om_account_accountant/om_account_accountant/views/: account_coa_template.xml  account_journal.xml  fiscal_position_template.xml  menu.xml  payment_method.xml  reconciliation.xml  settings.xml
odoo-bringout-odoomates-om_account_asset/: README.md  pyproject.toml
odoo-bringout-odoomates-om_account_asset/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  REPORTS.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-odoomates-om_account_budget/: README.md  pyproject.toml
odoo-bringout-odoomates-om_account_budget/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-odoomates-om_account_budget/om_account_budget/: __manifest__.py
odoo-bringout-odoomates-om_account_budget/om_account_budget/i18n/: bs.po
odoo-bringout-odoomates-om_account_budget/om_account_budget/models/: account_budget.py
odoo-bringout-odoomates-om_account_budget/om_account_budget/security/: account_budget_security.xml
odoo-bringout-odoomates-om_account_budget/om_account_budget/views/: account_analytic_account_views.xml  account_budget_views.xml  res_config_settings_views.xml
odoo-bringout-odoomates-om_account_daily_reports/: README.md  pyproject.toml
odoo-bringout-odoomates-om_account_daily_reports/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  REPORTS.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-odoomates-om_account_daily_reports/om_account_daily_reports/: __manifest__.py
odoo-bringout-odoomates-om_account_daily_reports/om_account_daily_reports/i18n/: bs.po
odoo-bringout-odoomates-om_account_followup/: README.md  pyproject.toml
odoo-bringout-odoomates-om_account_followup/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  REPORTS.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-odoomates-om_account_followup/om_account_followup/data/: data.xml
odoo-bringout-odoomates-om_account_followup/om_account_followup/i18n/: bs.po  (+1 more)
odoo-bringout-odoomates-om_data_remove/: README.md  pyproject.toml
odoo-bringout-odoomates-om_data_remove/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-odoomates-om_fiscal_year/: README.md  pyproject.toml
odoo-bringout-odoomates-om_fiscal_year/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-odoomates-om_fiscal_year/om_fiscal_year/: __manifest__.py
odoo-bringout-odoomates-om_hospital/: README.md  pyproject.toml
odoo-bringout-odoomates-om_hospital/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  REPORTS.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-odoomates-om_mass_confirm_cancel/: README.md  pyproject.toml
odoo-bringout-odoomates-om_mass_confirm_cancel/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-odoomates-om_recurring_payments/: README.md  pyproject.toml
odoo-bringout-odoomates-om_recurring_payments/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-odoomates-om_recurring_payments/om_recurring_payments/: __manifest__.py
odoo-bringout-odoomates-om_recurring_payments/om_recurring_payments/data/: recurring_cron.xml
odoo-bringout-odoomates-om_recurring_payments/om_recurring_payments/i18n/: bs.po
odoo-bringout-odoomates-om_recurring_payments/om_recurring_payments/views/: recurring_payment_view.xml  recurring_template_view.xml
odoo-bringout-odoomates-task_check_list/: README.md  pyproject.toml
odoo-bringout-odoomates-task_check_list/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
(+1 files in other folders)
